--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@silvenon/remark-smartypants": "^1.0.0",
     "@tailwindcss/typography": "^0.5.2",
     "gray-matter": "^4.0.3",
+    "mongodb": "^6.1.0",
     "next": "^12.1.0",
+    "next-connect": "^0.13.0",
     "next-mdx-remote": "^3.0.5",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
