--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.4",
     "@silvenon/remark-smartypants": "^1.0.0",
     "@tailwindcss/typography": "^0.5.2",
+    "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "mongodb": "^6.1.0",
     "next": "^12.1.0",
